--- a/index.html
+++ b/index.html
@@ -1,28 +1,30 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="Projet SIMPLonMARS3 - CSS Framework">
-        <meta name="author" content="Okba, Jean-Jacques, Alice, Kevin">
-        <title>CSS Framework - PRESENTATION</title>
-        <link rel="stylesheet" href="AcSS/reset.css">
-        <link rel="stylesheet" href="AcSS/normalize.css">
-        <link rel="stylesheet" href="AcSS/nav.css">
-        <link rel="stylesheet" href="AcSS/grid.css">
-        <link rel="stylesheet" href="AcSS/utils.css">
 
-        <link rel="stylesheet" href="css/style.css">
-    </head>
-    <body>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Projet SIMPLonMARS3 - CSS Framework">
+    <meta name="author" content="Okba, Jean-Jacques, Alice, Kevin">
+    <title>CSS Framework - PRESENTATION</title>
+    <link rel="stylesheet" href="AcSS/reset.css">
+    <link rel="stylesheet" href="AcSS/normalize.css">
+    <link rel="stylesheet" href="AcSS/nav.css">
+    <link rel="stylesheet" href="AcSS/grid.css">
+    <link rel="stylesheet" href="AcSS/utils.css">
 
-        <div id="wrapper">
-            <header>
-                <h1>Présentation du framework CSS</h1>
-            </header>
+    <link rel="stylesheet" href="css/style.css">
+</head>
 
-            <div id="wrapper-main">
-                <main>
+<body>
+
+    <div id="wrapper">
+        <header>
+            <h1>Présentation du framework CSS</h1>
+        </header>
+
+        <div id="wrapper-main">
+            <main>
                 <article>
                     <h2>Règles de reset.css</h2>
                     <section>
@@ -88,11 +90,28 @@
                                 Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
                             </div>
                             <div class="rule-show">
-                                <div>
-                                    Lorem ipsum dolor sit amet, consectetuer adispicing elit.
-                                </div>
-                                <div class="">
-                                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+                              <div>
+                                  <div>left</div>
+                                  <div>right</div>
+                                  <div>top</div>
+                                  <div>bottom</div>
+                                  <div>middle</div>
+                                  <div>topleft</div>
+                                  <div>topright</div>
+                                  <div>bottomleft</div>
+                                  <div>bottomright</div>
+                              </div>
+                                <div class="CUBE RESIZEFROMUSER">
+                                    <div class="left">left</div>
+                                    <div class="right">right</div>
+                                    <div class="top">top</div>
+                                    <div class="bottom">bottom</div>
+                                    <div class="middle">middle</div>
+                                     <span>AVEC</span>
+                                    <div class="topleft">topleft</div>
+                                    <div class="topright">topright</div>
+                                    <div class="bottomleft">bottomleft</div>
+                                    <div class="bottomright">bottomright</div>
                                 </div>
                             </div>
                         </div>
@@ -2093,19 +2112,19 @@
                         </div>
                     </section>
                 </article>
-                </main>
-            </div>
+            </main>
+        </div>
 
-            <footer>
-                <h2>
+        <footer>
+            <h2>
                     <a href="example.html">
                         Example
                     </a>
                 </h2>
-            </footer>
-        </div>
+        </footer>
+    </div>
 
-        <!--
+    <!--
             <section>
             <h3>Titre</h3>
             <div class="rules-container">
@@ -2127,5 +2146,6 @@
             </section>
         -->
 
-    </body>
+</body>
+
 </html>
