--- a/index.html
+++ b/index.html
@@ -24,18 +24,18 @@
                 <article>
                     <h2>Règles de reset.css</h2>
                     <section>
-                        <h3>Titre</h3>
-                        <h4>Titre</h4>
+                        <h3>Reset des margins</h3>
+                        <h4>pour tout les éléments html</h4>
                         <div class="rule-container">
                             <div class="rule-text">
-                                Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
+                                Les margins de tout les élément HTML à était mis a 0.
                             </div>
                             <div class="rule-show">
                                 <div>
-                                    Lorem ipsum dolor sit amet, consectetuer adispicing elit.
+
                                 </div>
                                 <div class="">
-                                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+                                    
                                 </div>
                             </div>
                         </div>
