--- a/index.html
+++ b/index.html
@@ -83,11 +83,11 @@
                 <article>
                     <h2>Règles de grid.css</h2>
                     <section>
-                        <h3>Titre</h3>
-                        <h4>Titre</h4>
+                        <h3>Les positions</h3>
+                        <h4><span class="sans">avec règle css</span><span class="avec">sans règle css</span></h4>
                         <div class="rule-container">
                             <div class="rule-text">
-                                Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
+                                règle css de positionement, elles se mettent en (position:absolute) et dépendent donc de leurs premier parent ayant la propriété (position:relative).
                             </div>
                             <div class="rule-show">
                               <div>
@@ -101,13 +101,12 @@
                                   <div>bottomleft</div>
                                   <div>bottomright</div>
                               </div>
-                                <div class="CUBE RESIZEFROMUSER">
+                                <div class="CUBE">
                                     <div class="left">left</div>
                                     <div class="right">right</div>
                                     <div class="top">top</div>
                                     <div class="bottom">bottom</div>
                                     <div class="middle">middle</div>
-                                     <span>AVEC</span>
                                     <div class="topleft">topleft</div>
                                     <div class="topright">topright</div>
                                     <div class="bottomleft">bottomleft</div>
