fixed titles and classes for border

--- a/index.html
+++ b/index.html
@@ -1245,7 +1245,7 @@
                     <section>
                         <h3>Border Top</h3>
                         <div class="rules-container">
-                            <h4>BORDERTOP1</h4>
+                            <h4>BORDERTOP1 / BT1</h4>
                             <div class="rule-container">
                                 <div class="rule-show">
                                     <div>
@@ -1256,7 +1256,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <h4>BORDERTOP2</h4>
+                            <h4>BORDERTOP2 / BT2</h4>
                             <div class="rule-container">
                                 <div class="rule-show">
                                     <div>
@@ -1267,7 +1267,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <h4>BORDERTOP3</h4>
+                            <h4>BORDERTOP3 / BT3</h4>
                             <div class="rule-container">
                                 <div class="rule-show">
                                     <div>
@@ -1278,7 +1278,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <h4>BORDERTOP4</h4>
+                            <h4>BORDERTOP4 / BT4</h4>
                             <div class="rule-container">
                                 <div class="rule-show">
                                     <div>
@@ -1289,7 +1289,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <h4>BORDERTOP5</h4>
+                            <h4>BORDERTOP5 / BT5</h4>
                             <div class="rule-container">
                                 <div class="rule-show">
                                     <div>
@@ -1305,7 +1305,7 @@
                     <section>
                         <h3>Border Right</h3>
                         <div class="rules-container">
-                            <h4>BORDERRIGHT1</h4>
+                            <h4>BORDERRIGHT1 / BR1</h4>
                             <div class="rule-container">
                                 <div class="rule-show">
                                     <div>
@@ -1316,7 +1316,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <h4>BORDERRIGHT2</h4>
+                            <h4>BORDERRIGHT2 / BR2</h4>
                             <div class="rule-container">
                                 <div class="rule-show">
                                     <div>
@@ -1327,7 +1327,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <h4>BORDERRIGHT3</h4>
+                            <h4>BORDERRIGHT3 / BR3</h4>
                             <div class="rule-container">
                                 <div class="rule-show">
                                     <div>
@@ -1338,7 +1338,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <h4>BORDERRIGHT4</h4>
+                            <h4>BORDERRIGHT4 / BR4</h4>
                             <div class="rule-container">
                                 <div class="rule-show">
                                     <div>
@@ -1349,7 +1349,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <h4>BORDERRIGHT5</h4>
+                            <h4>BORDERRIGHT5 / BR5</h4>
                             <div class="rule-container">
                                 <div class="rule-show">
                                     <div>
@@ -1365,7 +1365,7 @@
                     <section>
                         <h3>Border Bottom</h3>
                         <div class="rules-container">
-                            <h4>BORDERBOTTOM1</h4>
+                            <h4>BORDERBOTTOM1 / BB1</h4>
                             <div class="rule-container">
                                 <div class="rule-show">
                                     <div>
@@ -1376,7 +1376,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <h4>BORDERBOTTOM2</h4>
+                            <h4>BORDERBOTTOM2 / BB2</h4>
                             <div class="rule-container">
                                 <div class="rule-show">
                                     <div>
@@ -1387,7 +1387,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <h4>BORDERBOTTOM3</h4>
+                            <h4>BORDERBOTTOM3 / BB3</h4>
                             <div class="rule-container">
                                 <div class="rule-show">
                                     <div>
@@ -1398,7 +1398,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <h4>BORDERBOTTOM4</h4>
+                            <h4>BORDERBOTTOM4 / BB4</h4>
                             <div class="rule-container">
                                 <div class="rule-show">
                                     <div>
@@ -1409,7 +1409,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <h4>BORDERBOTTOM5</h4>
+                            <h4>BORDERBOTTOM5 / bB5</h4>
                             <div class="rule-container">
                                 <div class="rule-show">
                                     <div>
@@ -1425,7 +1425,7 @@
                     <section>
                         <h3>Border Left</h3>
                         <div class="rules-container">
-                            <h4>BORDERLEFT1</h4>
+                            <h4>BORDERLEFT1 / BL1</h4>
                             <div class="rule-container">
                                 <div class="rule-show">
                                     <div>
@@ -1436,7 +1436,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <h4>BORDERLEFT2</h4>
+                            <h4>BORDERLEFT2 / BL2</h4>
                             <div class="rule-container">
                                 <div class="rule-show">
                                     <div>
@@ -1447,7 +1447,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <h4>BORDERLEFT3</h4>
+                            <h4>BORDERLEFT3 / BL3</h4>
                             <div class="rule-container">
                                 <div class="rule-show">
                                     <div>
@@ -1458,7 +1458,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <h4>BORDERLEFT4</h4>
+                            <h4>BORDERLEFT4 / BL4</h4>
                             <div class="rule-container">
                                 <div class="rule-show">
                                     <div>
@@ -1469,7 +1469,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <h4>BORDERLEFT5</h4>
+                            <h4>BORDERLEFT5 / BL5</h4>
                             <div class="rule-container">
                                 <div class="rule-show">
                                     <div>
@@ -1485,57 +1485,57 @@
                     <section>
                         <h3>Border All</h3>
                         <div class="rules-container">
-                            <h4>BORDER1</h4>
+                            <h4>BORDERALL1 / BA1</h4>
                             <div class="rule-container">
                                 <div class="rule-show">
                                     <div>
                                         Lorem ipsum dolor sit amet, consectetuer adispicing elit.
                                     </div>
-                                    <div class="BORDER1">
+                                    <div class="BORDERALL1">
                                         Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
                                     </div>
                                 </div>
                             </div>
-                            <h4>BORDER2</h4>
+                            <h4>BORDERALL2 / BA2</h4>
                             <div class="rule-container">
                                 <div class="rule-show">
                                     <div>
                                         Lorem ipsum dolor sit amet, consectetuer adispicing elit.
                                     </div>
-                                    <div class="BORDER2">
+                                    <div class="BORDERALL2">
                                         Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
                                     </div>
                                 </div>
                             </div>
-                            <h4>BORDER3</h4>
+                            <h4>BORDERALL3 / BA3</h4>
                             <div class="rule-container">
                                 <div class="rule-show">
                                     <div>
                                         Lorem ipsum dolor sit amet, consectetuer adispicing elit.
                                     </div>
-                                    <div class="BORDER3">
+                                    <div class="BORDERALL3">
                                         Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
                                     </div>
                                 </div>
                             </div>
-                            <h4>BORDER4</h4>
+                            <h4>BORDERALL4 / BA4</h4>
                             <div class="rule-container">
                                 <div class="rule-show">
                                     <div>
                                         Lorem ipsum dolor sit amet, consectetuer adispicing elit.
                                     </div>
-                                    <div class="BORDER4">
+                                    <div class="BORDERALL4">
                                         Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
                                     </div>
                                 </div>
                             </div>
-                            <h4>BORDER5</h4>
+                            <h4>BORDERALL5 / BA5</h4>
                             <div class="rule-container">
                                 <div class="rule-show">
                                     <div>
                                         Lorem ipsum dolor sit amet, consectetuer adispicing elit.
                                     </div>
-                                    <div class="BORDER5">
+                                    <div class="BORDERALL5">
                                         Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
                                     </div>
                                 </div>
