fixed titles and classes for font-[family/weight/style/variant/color] and background-color

--- a/index.html
+++ b/index.html
@@ -1545,7 +1545,7 @@
                     <section>
                         <h3>Font Families</h3>
                         <div class="rules-container">
-                            <h4>SERIF</h4>
+                            <h4>SERIF / FFS</h4>
                             <div class="rule-container">
                                 <div class="rule-show">
                                     <div>
@@ -1556,7 +1556,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <h4>SANSSERIF</h4>
+                            <h4>SANSSERIF / FFSS</h4>
                             <div class="rule-container">
                                 <div class="rule-show">
                                     <div>
@@ -1567,7 +1567,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <h4>MONOSPACE</h4>
+                            <h4>MONOSPACE / FFM</h4>
                             <div class="rule-container">
                                 <div class="rule-show">
                                     <div>
@@ -1583,7 +1583,7 @@
                     <section>
                         <h3>Font Weights</h3>
                         <div class="rules-container">
-                            <h4>BOLD</h4>
+                            <h4>BOLD / FWB</h4>
                             <div class="rule-container">
                                 <div class="rule-show">
                                     <div>
@@ -1594,7 +1594,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <h4>BOLDER</h4>
+                            <h4>BOLDER / FWB2</h4>
                             <div class="rule-container">
                                 <div class="rule-show">
                                     <div>
@@ -1605,7 +1605,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <h4>LIGHTER</h4>
+                            <h4>LIGHTER / FWL</h4>
                             <div class="rule-container">
                                 <div class="rule-show">
                                     <div>
@@ -1621,7 +1621,7 @@
                     <section>
                         <h3>Font Styles</h3>
                         <div class="rules-container">
-                            <h4>ITALIC</h4>
+                            <h4>ITALIC / FSI</h4>
                             <div class="rule-container">
                                 <div class="rule-show">
                                     <div>
@@ -1632,7 +1632,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <h4>OBLIQUE</h4>
+                            <h4>OBLIQUE / FSO</h4>
                             <div class="rule-container">
                                 <div class="rule-show">
                                     <div>
@@ -1648,7 +1648,7 @@
                     <section>
                         <h3>Font Variant</h3>
                         <div class="rules-container">
-                            <h4>SMALLCAPS</h4>
+                            <h4>SMALLCAPS / FVSC</h4>
                             <div class="rule-container">
                                 <div class="rule-show">
                                     <div>
@@ -1664,7 +1664,7 @@
                     <section>
                         <h3>Font Colors</h3>
                         <div class="rules-container">
-                            <h4>FONTRED</h4>
+                            <h4>FONTRED / FCR</h4>
                             <div class="rule-container">
                                 <div class="rule-show">
                                     <div>
@@ -1675,7 +1675,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <h4>FONTGREEN</h4>
+                            <h4>FONTGREEN / FCG</h4>
                             <div class="rule-container">
                                 <div class="rule-show">
                                     <div>
@@ -1686,7 +1686,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <h4>FONTBLUE</h4>
+                            <h4>FONTBLUE / FCB</h4>
                             <div class="rule-container">
                                 <div class="rule-show">
                                     <div>
@@ -1697,7 +1697,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <h4>FONTYELLOW</h4>
+                            <h4>FONTYELLOW / FCY</h4>
                             <div class="rule-container">
                                 <div class="rule-show">
                                     <div>
@@ -1708,7 +1708,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <h4>FONTBLACK</h4>
+                            <h4>FONTBLACK / FC0</h4>
                             <div class="rule-container">
                                 <div class="rule-show">
                                     <div>
@@ -1719,7 +1719,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <h4>FONTGREY25</h4>
+                            <h4>FONTGREY25 / FCG1</h4>
                             <div class="rule-container">
                                 <div class="rule-show">
                                     <div>
@@ -1730,7 +1730,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <h4>FONTGREY50</h4>
+                            <h4>FONTGREY50 / FCG2</h4>
                             <div class="rule-container">
                                 <div class="rule-show">
                                     <div>
@@ -1741,7 +1741,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <h4>FONTGREY75</h4>
+                            <h4>FONTGREY75 / FCG3</h4>
                             <div class="rule-container">
                                 <div class="rule-show">
                                     <div>
@@ -1752,7 +1752,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <h4>FONTWHITE</h4>
+                            <h4>FONTWHITE / FCW</h4>
                             <div class="rule-container">
                                 <div class="rule-show">
                                     <div>
@@ -1768,7 +1768,7 @@
                     <section>
                         <h3>Background Colors</h3>
                         <div class="rules-container">
-                            <h4>BACKRED</h4>
+                            <h4>BACKRED / BCR</h4>
                             <div class="rule-container">
                                 <div class="rule-show">
                                     <div>
@@ -1779,7 +1779,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <h4>BACKGREEN</h4>
+                            <h4>BACKGREEN / BCG</h4>
                             <div class="rule-container">
                                 <div class="rule-show">
                                     <div>
@@ -1790,7 +1790,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <h4>BACKBLUE</h4>
+                            <h4>BACKBLUE / BCB</h4>
                             <div class="rule-container">
                                 <div class="rule-show">
                                     <div>
@@ -1801,7 +1801,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <h4>BACKYELLOW</h4>
+                            <h4>BACKYELLOW / BCY</h4>
                             <div class="rule-container">
                                 <div class="rule-show">
                                     <div>
@@ -1812,7 +1812,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <h4>BACKBLACK</h4>
+                            <h4>BACKBLACK / BC0</h4>
                             <div class="rule-container">
                                 <div class="rule-show">
                                     <div>
@@ -1823,7 +1823,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <h4>BACKGREY25</h4>
+                            <h4>BACKGREY25 / BCG1</h4>
                             <div class="rule-container">
                                 <div class="rule-show">
                                     <div>
@@ -1834,7 +1834,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <h4>BACKGREY50</h4>
+                            <h4>BACKGREY50 / BCG2</h4>
                             <div class="rule-container">
                                 <div class="rule-show">
                                     <div>
@@ -1845,7 +1845,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <h4>BACKGREY75</h4>
+                            <h4>BACKGREY75 / BCG3</h4>
                             <div class="rule-container">
                                 <div class="rule-show">
                                     <div>
@@ -1856,7 +1856,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <h4>BACKWHITE</h4>
+                            <h4>BACKWHITE / BCW</h4>
                             <div class="rule-container">
                                 <div class="rule-show">
                                     <div>
