--- a/index.html
+++ b/index.html
@@ -1872,7 +1872,7 @@
                     <section>
                         <h3>Font Sizes</h3>
                         <div class="rules-container">
-                            <h4>REM025</h4>
+                            <h4>REM025 / FS1</h4>
                             <div class="rule-container">
                                 <div class="rule-show">
                                     <div>
@@ -1883,7 +1883,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <h4>REM050</h4>
+                            <h4>REM050 / FS2</h4>
                             <div class="rule-container">
                                 <div class="rule-show">
                                     <div>
@@ -1894,7 +1894,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <h4>REM075</h4>
+                            <h4>REM075 / F23</h4>
                             <div class="rule-container">
                                 <div class="rule-show">
                                     <div>
@@ -1905,7 +1905,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <h4>REM100</h4>
+                            <h4>REM100 / FS4</h4>
                             <div class="rule-container">
                                 <div class="rule-show">
                                     <div>
@@ -1916,7 +1916,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <h4>REM125</h4>
+                            <h4>REM125 / FS5</h4>
                             <div class="rule-container">
                                 <div class="rule-show">
                                     <div>
@@ -1927,7 +1927,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <h4>REM150</h4>
+                            <h4>REM150 / FS6</h4>
                             <div class="rule-container">
                                 <div class="rule-show">
                                     <div>
@@ -1938,7 +1938,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <h4>REM175</h4>
+                            <h4>REM175 / FS7</h4>
                             <div class="rule-container">
                                 <div class="rule-show">
                                     <div>
@@ -1949,7 +1949,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <h4>REM200</h4>
+                            <h4>REM200 / FS8</h4>
                             <div class="rule-container">
                                 <div class="rule-show">
                                     <div>
@@ -1960,7 +1960,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <h4>REM225</h4>
+                            <h4>REM225 / FS9</h4>
                             <div class="rule-container">
                                 <div class="rule-show">
                                     <div>
@@ -1971,7 +1971,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <h4>REM250</h4>
+                            <h4>REM250 / FS10</h4>
                             <div class="rule-container">
                                 <div class="rule-show">
                                     <div>
@@ -1982,7 +1982,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <h4>REM275</h4>
+                            <h4>REM275 / FS11</h4>
                             <div class="rule-container">
                                 <div class="rule-show">
                                     <div>
@@ -1993,7 +1993,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <h4>REM300</h4>
+                            <h4>REM300 / FS12</h4>
                             <div class="rule-container">
                                 <div class="rule-show">
                                     <div>
@@ -2004,7 +2004,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <h4>REM325</h4>
+                            <h4>REM325 / FS13</h4>
                             <div class="rule-container">
                                 <div class="rule-show">
                                     <div>
@@ -2015,7 +2015,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <h4>REM350</h4>
+                            <h4>REM350 / FS14</h4>
                             <div class="rule-container">
                                 <div class="rule-show">
                                     <div>
@@ -2026,7 +2026,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <h4>REM375</h4>
+                            <h4>REM375 / FS15</h4>
                             <div class="rule-container">
                                 <div class="rule-show">
                                     <div>
@@ -2037,7 +2037,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <h4>REM400</h4>
+                            <h4>REM400 / FS16</h4>
                             <div class="rule-container">
                                 <div class="rule-show">
                                     <div>
@@ -2048,7 +2048,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <h4>REM425</h4>
+                            <h4>REM425 / FS17</h4>
                             <div class="rule-container">
                                 <div class="rule-show">
                                     <div>
@@ -2059,7 +2059,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <h4>REM450</h4>
+                            <h4>REM450 / FS18</h4>
                             <div class="rule-container">
                                 <div class="rule-show">
                                     <div>
@@ -2070,7 +2070,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <h4>REM475</h4>
+                            <h4>REM475 / FS19</h4>
                             <div class="rule-container">
                                 <div class="rule-show">
                                     <div>
@@ -2081,7 +2081,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <h4>REM500</h4>
+                            <h4>REM500 / FS20</h4>
                             <div class="rule-container">
                                 <div class="rule-show">
                                     <div>
