--- a/index.html
+++ b/index.html
@@ -22,62 +22,47 @@
             </header>
 
             <div id="wrapper-main">
-                <main>
+              <main>
                 <article>
-                    <h2>Règles de reset.css</h2>
-                    <section>
-                        <h3>Reset des margins</h3>
-                        <h4>pour tout les éléments html</h4>
-                        <div class="rule-container">
-                            <div class="rule-text">
-                                Les margins de tout les élément HTML à était mis a 0.
-                            </div>
-                            <div class="rule-show">
-                                <div>
+                  <h2>Reset css</h2>
+                  <section>
+                      <h3>Reset de propriété</h3>
+                      <div class="rules-container">
+                          <div class="rule-container">
+                              <div class="rule-text" style="width:100%">
+                                  Mise à 0 des margins, paddings, border et outline.<br/>
+                                  Reset de la taille et des types de polices.</br>
+                                  Reset taile de ligne.</br>
+                                  Alignement de chaque balise sur les lignes parent.
+                              </div>
+                          </div>
+                      </div>
+                  </section>
+                  <section>
+                      <h3>Correction bug vieux navigateurs</h3>
+                      <div class="rules-container">
+                          <div class="rule-container">
+                              <div class="rule-text" style="width:100%">
+                                  Correction du display des balises HTML5.</br>
+                                  Suppression des bordures sur les balises IMG (présent par défaut sous IE/8/9/10).</br>
+                                  Suppression du fond gris quand les liens sont actif sur IE10.
 
-                                </div>
-                                <div class="">
-                                    
-                                </div>
-                            </div>
-                        </div>
-                    </section>
-                    <section>
-                        <h3>Titre</h3>
-                        <h4>Titre</h4>
-                        <div class="rule-container">
-                            <div class="rule-text">
-                                Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
-                            </div>
-                            <div class="rule-show">
-                                <div>
-                                    Lorem ipsum dolor sit amet, consectetuer adispicing elit.
-                                </div>
-                                <div class="">
-                                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
-                                </div>
-                            </div>
-                        </div>
-                    </section>
-                    <section>
-                        <h3>Titre</h3>
-                        <h4>Titre</h4>
-                        <div class="rule-container">
-                            <div class="rule-text">
-                                Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
-                            </div>
-                            <div class="rule-show">
-                                <div>
-                                    Lorem ipsum dolor sit amet, consectetuer adispicing elit.
-                                </div>
-                                <div class="">
-                                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
-                                </div>
-                            </div>
-                        </div>
-                    </section>
+                              </div>
+                          </div>
+                      </div>
+                  </section>
+                  <section>
+                      <h3>Modification de style par défaut</h3>
+                      <div class="rules-container">
+                          <div class="rule-container">
+                              <div class="rule-text" style="width:100%">
+                                  Suppression du style des listes ordonnées et désordonnées (suppression des puces).</br>
+                                  Fusion par défaut des bordures de tableau.</br>
+                              </div>
+                          </div>
+                      </div>
+                  </section>
                 </article>
-
                 <article>
                     <h2>Règles de grid.css</h2>
                     <section>
