ajout d'une explication détaillé sur le .RESIZEFROMUSER

--- a/index.html
+++ b/index.html
@@ -87,8 +87,7 @@
                         <h4><span class="sans">sans règle css</span><span class="avec">avec règle css</span></h4>
                         <div class="rule-container">
                             <div class="rule-text">
-                                règle css de positionement, elles se mettent en (position:absolute) et dépendent donc de leurs premier parent ayant la propriété (position:relative).
-                                Noms des class:
+                                règle css de positionement, elles se mettent en (position:absolute) et dépendent donc de leurs premier parent ayant la propriété (position:relative). Noms des class:
                                 <li>.L = met l'objet dans le coin gauche de son parent et se trouvant à 50% en dessous du top de ce même parrent</li>
                                 <li>.R = met l'objet dans le coin droit de son parent et se trouvant à 50% en dessous du top de ce même parrent</li>
                                 <li>.T = met l'objet dans la partie supérieur de son parent en étant centré avec un left:50%</li>
@@ -100,17 +99,17 @@
                                 <li>.BR = met l'objet dans le coin inférieur droit de son parent</li>
                             </div>
                             <div class="rule-show">
-                              <div class="CUBE">
-                                  <div>left</div>
-                                  <div>right</div>
-                                  <div>top</div>
-                                  <div>bottom</div>
-                                  <div>middle</div>
-                                  <div>topleft</div>
-                                  <div>topright</div>
-                                  <div>bottomleft</div>
-                                  <div>bottomright</div>
-                              </div>
+                                <div class="CUBE">
+                                    <div>left</div>
+                                    <div>right</div>
+                                    <div>top</div>
+                                    <div>bottom</div>
+                                    <div>middle</div>
+                                    <div>topleft</div>
+                                    <div>topright</div>
+                                    <div>bottomleft</div>
+                                    <div>bottomright</div>
+                                </div>
                                 <div class="CUBE">
                                     <div class="left">left</div>
                                     <div class="right">right</div>
@@ -126,18 +125,20 @@
                         </div>
                     </section>
                     <section>
-                        <h3>Titre</h3>
+                        <h3>Le .RESIZEFROMUSER</h3>
                         <h4><span class="sans">sans règle css</span><span class="avec">avec règle css</span></h4>
                         <div class="rule-container">
                             <div class="rule-text">
-                                Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
+.RESIZEFROMUSER, cette class permet de rendre l'objet au quel cete classe est atribué capable d'être modifié par l'utilisateur permettre entre autre de changer la taille d'une div, article, etc......
                             </div>
                             <div class="rule-show">
-                                <div>
-                                    Lorem ipsum dolor sit amet, consectetuer adispicing elit.
+                                <div class="CUBE">
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
+                                    in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                                 </div>
-                                <div class="">
-                                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+                                <div class="CUBE RESIZEFROMUSER">
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
+                                    in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                                 </div>
                             </div>
                         </div>
