--- a/index.html
+++ b/index.html
@@ -88,15 +88,15 @@
                         <div class="rule-container">
                             <div class="rule-text">
                                 règle css de positionement, elles se mettent en (position:absolute) et dépendent donc de leurs premier parent ayant la propriété (position:relative). Noms des class:
-                                <li>.L = met l'objet dans le coin gauche de son parent et se trouvant à 50% en dessous du top de ce même parrent</li>
-                                <li>.R = met l'objet dans le coin droit de son parent et se trouvant à 50% en dessous du top de ce même parrent</li>
-                                <li>.T = met l'objet dans la partie supérieur de son parent en étant centré avec un left:50%</li>
-                                <li>.B = met l'objet dans la partie inférieur de son parent en étant centré avec un left:50%</li>
-                                <li>.M = met l'objet au centre de son parent avec equidistance entre les deux pointd'un même axe Y ou X de son parent</li>
-                                <li>.TL = met l'objet dans le coin supérieur gauche de son parent</li>
-                                <li>.TR = met l'objet dans le coin supérieur droit de son parent</li>
-                                <li>.BL = met l'objet dans le coin inférieur gauche de son parent</li>
-                                <li>.BR = met l'objet dans le coin inférieur droit de son parent</li>
+                                <li>.L = met l'objet dans le coin gauche de son parent et se trouvant à 50% en dessous du top de ce même parrent.</li>
+                                <li>.R = met l'objet dans le coin droit de son parent et se trouvant à 50% en dessous du top de ce même parrent.</li>
+                                <li>.T = met l'objet dans la partie supérieur de son parent en étant centré avec un left:50%.</li>
+                                <li>.B = met l'objet dans la partie inférieur de son parent en étant centré avec un left:50%.</li>
+                                <li>.M = met l'objet au centre de son parent avec equidistance entre les deux pointd'un même axe Y ou X de son parent.</li>
+                                <li>.TL = met l'objet dans le coin supérieur gauche de son parent.</li>
+                                <li>.TR = met l'objet dans le coin supérieur droit de son parent.</li>
+                                <li>.BL = met l'objet dans le coin inférieur gauche de son parent.</li>
+                                <li>.BR = met l'objet dans le coin inférieur droit de son parent.</li>
                             </div>
                             <div class="rule-show">
                                 <div class="CUBE">
@@ -148,7 +148,7 @@
                         <h4><span class="sans">sans règle css</span><span class="avec">avec règle css</span></h4>
                         <div class="rule-container">
                             <div class="rule-text">
-                                Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
+                                Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci.
                             </div>
                             <div class="rule-show">
                                 <div>
